Fixed exercise names to parse the selected language. Fixed jsav exercise height issues. Added splitting in exercises with novel method, by utilizing Bootstrap's grid system.

--- a/exammode/templates/exammode/base.html
+++ b/exammode/templates/exammode/base.html
@@ -47,6 +47,8 @@
 <link rel="stylesheet" href="{% static 'exammode/css/exam.css' %}" />
 <script src="{% static 'js/polyfill-find.js' %}"></script>
 <script src="{% static 'js/aplus.js' %}"></script>
+
+<script src="{% static 'exammode/js/iframeResizer.min.js' %}"></script>
 <script src="{% static 'exammode/js/exam.js' %}"></script>
 
 {% for url in instance.head_css_urls %}
