--- a/exammode/templates/exammode/exam_question.html
+++ b/exammode/templates/exammode/exam_question.html
@@ -47,7 +47,7 @@
 			<h4 class="panel-title">
 				{% points_badge summary "pull-right" %}
 				<span class="caret" aria-hidden="true"></span>
-				{{exercise.name}}
+				{{ exercise.name|parse_localization }}
 			</h4>
 		</div>
 
@@ -57,7 +57,7 @@
 					{% if issues and not submission_allowed %}
 						{% include 'exercise/_warnings_overlay.html' %}
 					{% endif %}
-	
+
 					{% if exercisecollection %}
 						{% include 'exercise/_exercisecollection.html' %}
 					{% elif exercise.is_submittable %}
@@ -148,7 +148,7 @@
 							{% endif %}
 						</nav>
 					{% endif %}
-	
+
 					<div
 						class="exercise-response"
 						data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}"
