Bug fix. Limit decimal values to two. Add option to filters to get the count of filtered rows.

--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -77,7 +77,7 @@
 
 		<!--Checkboxes to select extra information about data-->
 		<div style="margin: 10px;">
-			<h4 class="text-center">{% trans "Summaries" %}</h4>
+			<h4>{% trans "Summaries" %}</h4>
 			<label style="margin-left: 10px;" class="checkbox-inline" data-toggle="tooltip"
 				title="{% trans 'Total number of submissions. Calculates all student submission counts together.' %}">
 				<input type="checkbox" class="total-subm-checkbox" value="total-subm">
