--- a/edit_course/templates/edit_course/usertag_list.html
+++ b/edit_course/templates/edit_course/usertag_list.html
@@ -26,6 +26,7 @@
 	<table class="table table-striped table-bordered table-condensed">
 		<tr>
 			<th>{% trans "Tag" %}</th>
+			<th>{% trans "Slug" %}</th>
 			<th>{% trans "Description" %}</th>
 			<th>{% trans "Visible to students" %}</th>
 			<th>{% trans "Actions" %}</th>
@@ -34,6 +35,7 @@
 		{% for tag in object_list %}
 		<tr>
 			<td>{{ tag|colortag }}</td>
+			<td>{{ tag.slug }}</td>
 			<td>{{ tag.description }}</td>
 			<td>{% if tag.visible_to_students %}<span style="color: #00B000;">yes</span>{% else %}<span style="color: #B00000;">no</span>{% endif %}</td>
 			<td>
